# project-dash

./: .gitignore  README.md  __main__.py  app.py  githubgraphs.py  githubretriever.py  index.py  jiragraphs.py  jiraretriever.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
apps/: github.py  jira.py
assets/: style.css
