[tool.poetry]
name = "project-dash"
version = "0.1.0"
description = ""
authors = ["Jitse-Jan"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
jira = "^2.0.0"
jupyter = "^1.0.0"
pandas = "1.0.3"
isort = "^4.3.21"
confuse = "^1.1.0"
black = "^19.10b0"
dash = "^1.12.0"
dash_bootstrap_components = "^0.10.2"
pylint = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
