[tool.poetry]
name = "projectdash"
version = "0.1.0"
description = "Project using Dash for insightful dashboard."
authors = ["Jitse-Jan <code@jitsejan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
connector-party = "0.6.0"
confuse = "^1.4.0"
pygithub = "^1.54.1"
dash-bootstrap-components = "^0.12.0"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"

[[tool.poetry.source]]
name = "pyjitsejan"
url = "https://pypi.jitsejan.com/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
